# mercado_bitcoin

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: feature_branch.yml
mercado_bitcoin/: apis.py  ingestors.py  main.py  writers.py
tests/: requirements.txt  test_apis.py  test_ingestors.py  test_integration.py  test_writers.py
