[tool.poetry]
name = "mercado_bitcoin"
version = "0.1.0"
description = ""
authors = ["Bruno Martins <brunocmartins4@gmail.com>"]
readme = "README.md"
packages = [{include = "mercado_bitcoin"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
ratelimit = "^2.2.1"
backoff = "^2.2.1"
boto3 = "^1.24.91"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
